# numbers_rus

./: .gitignore  Cargo.toml  README.md
doc/: crates.js  help.html  search-index.js  settings.html  source-files.js
doc/either/: enum.Either.html
doc/itertools/: enum.Either.html  trait.PeekingNext.html
doc/lib/: all.html  fn.add.html  fn.add_float.html  fn.dataframe_create.html  fn.divide.html  fn.divide_float.html  fn.factorial.html  fn.factorial_float.html  fn.fibonacci.html  fn.fibonacci_float.html  fn.is_even.html  fn.is_even_float.html  fn.is_odd.html  fn.is_odd_float.html  fn.is_perfect_cube.html  fn.is_perfect_cube_float.html  fn.is_perfect_power.html  fn.is_perfect_power_float.html  fn.is_perfect_square.html  fn.is_perfect_square_float.html  fn.is_prime.html  fn.is_prime_float.html  fn.modulo.html  fn.modulo_float.html  fn.multiply.html  fn.multiply_float.html  fn.power.html  fn.power_float.html  fn.root.html  fn.root_float.html  fn.subtract.html  fn.subtract_float.html  fn.two_vector_median.html  fn.two_vector_median_float.html  fn.two_vector_mode.html  fn.two_vector_mode_float.html  fn.vector_add.html  fn.vector_add_float.html  fn.vector_average.html  fn.vector_average_float.html  (+41 more)
doc/num_traits/: trait.Num.html
doc/numbers_rus/: all.html  index.html  sidebar-items.js
doc/ordered_float/: all.html  enum.ParseNotNanError.html  index.html  struct.FloatIsNan.html  struct.NotNan.html  struct.OrderedFloat.html  trait.Float.html
examples/: solver.rs
src/: lib.rs
src/dataframe/: dataframe.rs  mod.rs
src/double/: mod.rs  (+1 more)
tests/: numbers_rs_test.rs
(+311 files in other folders)
