[package]
name = "numbers_rus"
version = "0.2.1"
authors = ["Ola Yeku <yekuola@gmail.com>"]
repository = "https://github.com/ooyeku/numbers_rus.git"
edition = "2021"
description = "A flexible library for working with numbers that aims to be useful, fast, and practical.   Modular structure makes it easy to use only the parts you need, and the library is designed to be extensible, so you can easily add your own types and operations."
license = "MIT OR Apache-2.0"

[lib]
name = "numbers_rus"
path = "src/lib.rs"


[dependencies]
ordered-float = "4.2.0"
itertools = "0.12.0"
rand = "0.8.4"
